style.css
html, body {
  width: 100%;
  height: auto;
  margin: 0;
  padding: 0;
  line-height: 1.8;
  background-color: #F2F1E8;
  font-family: 'Merriweather', serif;
  color: #131511;
}

/* ++++++++++++++++++++++++++++++++++++++++++ */
/* +++++++++++++++ INDEX.HTML +++++++++++++++ */
/* ++++++++++++++++++++++++++++++++++++++++++ */

/* ========== HEADER ==================== */
header {
  position: fixed;
  width: 100%;
  margin: 0;
  padding: 1em;
  display: flex;
  background-color: #fff;
}
header nav {
  margin: 0 auto;
  align-self: center;
  font-family: 'Roboto', sans-serif;
}
nav a {
  text-transform: uppercase;
  padding: 0 2em;
  color: #2B2F26;
}
nav a:nth-child(3) {
  padding-right: 100px;
}
nav a:hover {
  color: #CD5D67;
}
nav a:active {
  color: #968772;
}

/* ========== MAIN ====================== */
main {
  width: 100%;
  padding: 1em;
}
main section {
  padding-top: 2em;
}
main h1 {
  text-align: center;
  font-size: 4.5em;
  font-weight: 500;
  margin-bottom: .25em
}
main h2 {
  text-align: center;
  font-size: 3em;
  font-weight: 500;
  margin-top: .25em;
  margin-bottom: 1.3em;
}

/* --- MAIN - image_row_1 --- */
.image_row_1 {
  width: 100%;
  margin: 0 auto;
}
.image_row_1 ul {
  padding: 0;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}
.image_row_1 ul li {
  list-style: none;
}
.image_row_1 ul li p {
  display: inline-block;
  color: #fff;
  background-color: rgba( 0, 0, 0, 0.8 );
  font-weight: 400;
  padding: 1em;
  margin-top: 20em;
}
.product-1 {
  background-image: url("images/optimized/product-1.jpg");
  background-size: 100% 100%;
  width: 60%;
  height: 25em;
  padding: 1em;
  padding: 0;
}
.product-2 {
  background-image: url("images/optimized/product-2.jpg");
  background-size: 100% 100%;
  width: 19%;
  height: 25em;
  padding: 0;
}
.product-3 {
  background-image: url("images/optimized/product-3.jpg");
  background-size: 100% 100%;
  width: 19%;
  height: 25em;
  padding: 0;
}

/* --- MAIN - image_row_2 --- */
.image_row_2 {
  width: 100%;
  margin: 0 auto;
}
.image_row_2 ul {
  padding: 0;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}
.image_row_2 ul li {
  list-style: none;
}
.image_row_2 ul li p {
  display: inline-block;
  color: #fff;
  background-color: rgba( 0, 0, 0, 0.8 );
  font-weight: 400;
  padding: 1em;
  margin-top: 13em;
}
.product-4 {
  background-image: url("images/optimized/product-4.jpg");
  background-size: 100% 100%;
  width: 19%;
  height: 18em;
  padding: 1em;
  padding: 0;
}
.product-5 {
  background-image: url("images/optimized/product-5.jpg");
  background-size: 100% 100%;
  width: 19%;
  height: 18em;
  padding: 0;
}
.product-6 {
  background-image: url("images/optimized/product-6.jpg");
  background-size: 100% 100%;
  width: 39%;
  height: 18em;
  padding: 0;
}
.product-7 {
  background-image: url("images/optimized/product-7.jpg");
  background-size: 100% 100%;
  width: 19%;
  height: 18em;
  padding: 0;
}

/* ========== FOOTER ====================== */
footer {
  width: 100%;
  margin: 0;
  padding: 1em;
  background-color: rgba( 0, 0, 0, 0.8 );
  color: #fff;
  font-weight: bolder;
}


/* ++++++++++++++++++++++++++++++++++++++++++ */
/* +++++++++++++++ ABOUT.HTML +++++++++++++++ */
/* ++++++++++++++++++++++++++++++++++++++++++ */

/*Header and Footer properties inherited from index.html*/

/* ========== MAIN ====================== */
.main_about {
  margin: 0;
  padding: 0;
}

/* --- SECTION - top_main --- */
.top_main h1 {
  text-align: center;
  font-size: 4.5em;
  font-weight: 500;
}
.top_main {
  width: 70%;
  margin: 0 auto;
}
.top_main img {
  width: 9.2em;
  height: 7.5em;
  float: left;
  margin: 0 1.2em 1em 0;
}
.top_main a {
  color: #968772;
}
.top_main a:hover {
  color: #967343;
}
.top_main p, blockquote {
  font-size: 1.2em;
}
.top_main blockquote {
  border-left: solid 2px gray;
  margin-left: 0;
  padding-left: 2em;
  color: gray;
}
.top_main h3 {
  font-size: 2em;
  font-weight: 400;
  margin-bottom: 0;
}
.top_main p:last-child {
  margin-top: 0;
}

/* --- SECTION - middle_main --- */
.middle_main {
  background-image: url("images/optimized/background-3.jpg");
  height: 20em;
  color: #fff;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

/* --- SECTION - bottom_main --- */
.bottom_main {
  width: 70%;
  margin: 0 auto;
  padding-top: 0;
}
.bottom_main h3 {
  font-size: 2em;
  font-weight: 400;
  margin-bottom: 0;
}
.bottom_main p {
  font-size: 1.2em
}
.bottom_main figure {
  margin: 0;
  padding: 0;
  padding-top: 6em;
  padding-left: 1em;
  float: right;
  width: 9.3em;
  font-size: .92em;
  color: rgb(149, 130, 110);
}
.bottom_main figure img {
  width: 9.6em;
  height: 7.5em;
}
.bottom_table {
  padding-top: 2em;
}
.bottom_table table{
  border-collapse: collapse;
  width: 84%;
  margin-bottom: 3em;
}
.tr_align {
  text-align: center;
}
.bottom_table table td {
  border: 1px solid black;
  padding: .3em .5em;
  font-size: 1.2em;
}
.tr_color {
  background-color: rgb(243, 233, 221);
}

/* ++++++++++++++++++++++++++++++++++++++++++ */
/* ++++++++++++ NEWSLETTER.HTML +++++++++++++ */
/* ++++++++++++++++++++++++++++++++++++++++++ */

/*Header properties inherited from index.html*/

/* ========== MAIN ====================== */
.main_newsletter {
  background-image: url("images/optimized/background-2.jpg");
  background-size: cover;
  background-position: top;
  width: 100%;
  box-sizing: border-box;
  min-height: 60vmin;
}
.form_section {
  background-color: #fff;
  margin: 6em auto 3em auto;
  padding: 0;
  height: 400px;
  width: 550px;
  display: flex;
}
.form_section form {
  background-color: #fff;
  margin: 10px auto;
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-around;
}
.form_section > form h3, h4, input {
  align-self: center;
}
.form_section h3 {
  margin: .25em auto 0 auto;
  font-size: 1.6em;
  font-weight: 200;
}
.form_section h4 {
  margin-top: 0;
  font-size: 1.2em;
  font-weight: 300;
}
.input_text {
  border: none;
  border-bottom: 2px solid #968772;
  width: 100%;
  font-size: 1em;
  color: rgb(117, 117, 117);
  padding: 2px;
}
textarea:focus, input:focus {
  outline: none;
  border-bottom: 2px solid #967343;:
}
.input_submit {
  border: none;
  color: #F2F1E8;
  background-color: #968772;
  font-size: 1.2em;
  padding: .75em 1.5em;
  margin: 20px auto;
}
.input_submit:hover {
  background-color: #967343;
  color: #ffffff;
}

/*FIN*/

